Fixed up some alignment in pixel art

--- a/pages/page-styles/pixelart.css
+++ b/pages/page-styles/pixelart.css
@@ -10,6 +10,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.mainer-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .main-content {
     display: flex;
     flex-direction: column;
@@ -21,8 +27,8 @@ body {
     border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
-    width: 550px;
-    height: 550px;
+    width: 500px;
+    height: 500px;
     overflow: hidden;
 }
 
@@ -119,6 +125,7 @@ select {
     justify-content: center;
     align-items: center;
     padding: 15px;
+    text-align: center;
 }
 
 /*reset button*/
